Merge from Service branch, validate condition to booking service